# singleton

./: LICENSE.md  README.md  meson.build
.github/workflows/: linux.yml  macos.yml  windows-mingw.yml  windows-msvc.yml
example/: meson.build  mock.cpp  nonthreadsafe.cpp  threadsafe.cpp
include/: meson.build  singleton  singleton.h
